@@ -39,9 +39,24 @@
   <translation type="gettext">baobab</translation>
 
   <releases>
+    <release version="42.rc" date="2022-03-07">
+      <description>
+        <p>Disk Usage Analyzer 42.rc comes with the following translation updates:</p>
+        <ul>
+          <li>Bulgarian</li>
+          <li>Finnish</li>
+          <li>French</li>
+          <li>Korean</li>
+          <li>Lithuanian</li>
+          <li>Polish</li>
+          <li>Swedish</li>
+          <li>Turkish</li>
+        </ul>
+      </description>
+    </release>
     <release version="42.beta" date="2022-02-15">
       <description>
-        <p>Disk Usage Analyzer 42.alpha comes with the following translation updates:</p>
+        <p>Disk Usage Analyzer 42.beta comes with the following translation updates:</p>
         <ul>
           <li>Catalan</li>
           <li>Czech</li>
