@@ -1,3 +1,15 @@
+42.rc
+=========
+* Translation updates:
+ - Bulgarian
+ - Finnish
+ - French
+ - Korean
+ - Lithuanian
+ - Polish
+ - Swedish
+ - Turkish
+
 42.beta
 =========
 * Translation updates:
